# omim

./: CMakeLists.txt
3party/: 3party.pro
3party/kakasi/: CMakeLists.txt  kakasi.pro
3party/kakasi/lib/: libdict.c  libitaiji.c  libkakasi.c  libkakasi.h  libkanjiio.c
3party/kakasi/mkkanwa/: mkkanwa.pro
3party/kakasi/src/: kakasi.h
coding/: CMakeLists.txt  localizable_string.hpp  localizable_string_index.hpp  multilang_utf8_string.cpp
data/: classificator.txt  colors.txt  countries.txt  drules_proto.txt  drules_proto_clear.txt  drules_proto_dark.txt  mapcss-mapping.csv  types.txt  visibility.txt
descriptions/: header.hpp  loader.cpp  loader.hpp  serdes.cpp  serdes.hpp
drape/: batcher.cpp  batcher.hpp  debug_rect_renderer.cpp  debug_rect_renderer.hpp  drape_global.hpp  mesh_object.cpp  mesh_object.hpp  overlay_handle.cpp  overlay_handle.hpp  overlay_tree.cpp  overlay_tree.hpp  render_bucket.cpp  render_bucket.hpp  static_texture.cpp  static_texture.hpp  texture_manager.cpp  texture_manager.hpp
drape_frontend/: CMakeLists.txt  apply_feature_functors.cpp  apply_feature_functors.hpp  area_shape.cpp  arrow3d.cpp  arrow3d.hpp  backend_renderer.cpp  backend_renderer.hpp  batch_merge_helper.cpp  color_constants.cpp  color_constants.hpp  colored_symbol_shape.cpp  drape_api.hpp  drape_engine.cpp  drape_engine.hpp  drape_measurer.cpp  engine_context.cpp  engine_context.hpp  frontend_renderer.cpp  frontend_renderer.hpp  gps_track_renderer.cpp  line_shape.cpp  map_shape.hpp  memory_feature_index.cpp  memory_feature_index.hpp  message.hpp  message_subclasses.hpp  (+31 more)
(+156 files in other folders)
